--- a/src/popup/popup.css
+++ b/src/popup/popup.css
@@ -1,42 +1,28 @@
 body {
-  background-color: #ffffff;
-} 
+  background-color: #f5f5f5;
+  width: 460px;
+  font-family: 'Roboto';
+}
 
-.App {
+.countWords-header {
+  height: 60px;
+  background-color:#f5f5f5;
+  border-bottom: 1px solid #ccc!important;
+}
+
+.countWords-header-logo {
+  text-align: right;
+  padding: 5px;
+}
+
+.countWords-header-name {
+  float:left;
+  padding: 15px;
+  font-weight: bold;
+  font-size:x-large;
+}
+
+.countWords-footer {
+  border-top: 1px solid #ccc!important;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
