--- a/src/components/ResultsDataCard/ResultsDataCard.css
+++ b/src/components/ResultsDataCard/ResultsDataCard.css
@@ -10,7 +10,11 @@
     padding: 15px;
 }
 
-.countWords-results-item {
+.countWords-results-stat {
     font-size:medium;
     padding-left: 15px;
+    width: 240px;
+}
+
+.countWords-results-frequency {
 }
